bad-pod-nolimits.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-nolimits-pod
spec:
  containers:
    - name: bad-container
      image: nginx
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
