bad-pod-root.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-root-pod
spec:
  containers:
    - name: bad-container
      image: nginx
