service.yaml
apiVersion: v1
kind: Service
metadata:
  name: month2-app-service
spec:
  selector:
    app: month2-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
